fix tags and text

--- a/pages/bg/bg.html
+++ b/pages/bg/bg.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Производство и продажба на древни музикални инструменти, можете да закупите ръчно изработени инструменти на достъпна цена от нас. Гусли, лира, кравик-лира, кантеле, канклес, канел, кокле"
+      content="Производство и продажба на древни музикални инструменти, можете да закупите ръчно изработени инструменти на достъпна цена от нас."
     />
     <meta
       name="keywords"
@@ -22,6 +22,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Музикални инструменти гусли(псалтир), лира</h1>
       <p class="content">
         Поздрави! Казвам се Евгений, аз съм от Беларус и правя стари музикални
         инструменти. Моите инструменти са ръчно изработени, имат естествен
@@ -34,15 +35,13 @@
         страни. Условията за доставка и плащане се договарят индивидуално.
         Пишете ми и ще обсъдим всичко.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Псалтир(гусли) слушане, псалтир(гусли) звук</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Мога да ти направя псалтир(гусли). По-долу са инструментите на склад:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">
-            Псалтир(гусли) слушане, псалтир(гусли) звук
-          </h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Мога да ти направя псалтир(гусли), по-долу са инструментите на склад:
+        </h2>
         <p class="text-gusli">
           Гуслите имат различни имена в различни страни, като КАНТЕЛЕ, ГУСЛИ,
           КОКЛЕ, КАНЕЛ, КАНКЛЕС. Това е музикален струнен инструмент от древен
@@ -71,9 +70,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Изработване на лира (кравик лира). По-долу са инструментите на склад:
-        </p>
+        <h2 class="text-lira-vnal">
+          Изработване на лира (кравик лира), по-долу са инструментите на склад:
+        </h2>
 
         <p class="text-lira">
           Лирата е древен струнен музикален инструмент от 14-16 век. Има плоско
