--- a/pages/cs/cs.html
+++ b/pages/cs/cs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Výroba a prodej starých hudebních nástrojů, zde si můžete koupit ručně vyráběné nástroje za přijatelnou cenu.PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Výroba a prodej starých hudebních nástrojů, zde si můžete koupit ručně vyráběné nástroje za přijatelnou cenu."
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Starověké hudební nástroje PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
+      Starověké hudební nástroje Psalterium, lyra, GUSLI, KOKLE,
       LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Hudební nástroje Psalterium, lyra</h1>
       <p class="content">
         Zdravím vás! Jmenuji se Eugen, jsem z Běloruska a vyrábím starožitné
         hudební nástroje. Mé nástroje jsou vyráběny ručně, mají přirozený
@@ -34,14 +35,14 @@
         Dodací a platební podmínky budou projednány individuálně. Kontaktujte mě
         a domluvíme se.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Poslech žaltáře, zvuk žaltáře</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Mohu ti vyrobit psalterium. Níže jsou uvedeny nástroje, které jsou
+        <h2 class="text-gusli-vnal">
+          Mohu ti vyrobit psalterium, níže jsou uvedeny nástroje, které jsou
           skladem:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Poslech žaltáře, zvuk žaltáře</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           V různých zemích mají žaltáře různé názvy, například KANTELE, PSALTERY,
           KOKLE, KANNEL, KANKLES, GUSLI. Jedná se o hudební strunný nástroj
@@ -69,10 +70,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Výroba lyry (kravik lyra). Níže jsou uvedeny nástroje, které jsou
+        <h2 class="text-lira-vnal">
+          Výroba lyry (kravik lyra), níže jsou uvedeny nástroje, které jsou
           skladem:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lyra je starobylý strunný drnkací hudební nástroj ze 14.-16. století.
