--- a/pages/da/da.html
+++ b/pages/da/da.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fremstilling og salg af gamle musikinstrumenter, her kan du købe håndlavede instrumenter til en overkommelig pris. KANTELE, PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Fremstilling og salg af gamle musikinstrumenter, her kan du købe håndlavede instrumenter til en overkommelig pris."
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Gamle musikinstrumenter. PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
-      LYRE, KANNEL, KANKLES
+      Gamle musikinstrumenter. PSALTERY, Lyren, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
+      LYRE, KANNEL, KANKLES 
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musikinstrumenter Psaltery, lyren </h1>
       <p class="content">
         Vær hilset! Mit navn er Eugene, jeg er fra Hviderusland, og jeg er
         engageret i fremstillingen af ​​gamle musikinstrumenter. Mine
@@ -35,13 +36,13 @@
         levering til forskellige lande. Leverings- og betalingsbetingelser
         forhandles individuelt. Skriv til mig, så diskuterer vi alt.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Psaltery lytning, psaltery lyd</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Jeg kan lave dig et psalteri. Nedenfor er instrumenterne på lager:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Psaltery lytning, psaltery lyd</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Jeg kan lave dig et psalteri, nedenfor er instrumenterne på lager:
+        </h2>
         <p class="text-gusli">
           Psalterier har forskellige navne i forskellige lande, f.eks. KANTELE,
           PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Det er et musikalsk
@@ -71,10 +72,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Fremstilling af en lyre (kravik lyre). Nedenfor er de instrumenter,
+        <h2 class="text-lira-vnal">
+          Fremstilling af en lyre (kravik lyre), nedenfor er de instrumenter,
           der er på lager:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lyren er et gammelt stryger- og plukkemusikinstrument fra det 14.-16.
