--- a/pages/en/en.html
+++ b/pages/en/en.html
@@ -12,7 +12,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES, ancient musical instruments</title>
+    <title>PSALTERY, KRAVIK-LYRE, ancient musical instruments, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES, </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
    
@@ -20,6 +20,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musical instruments Psaltery, lyre</h1>
       <p class="content">
         Greetings! My name is Eugene, I am from Belarus and I am engaged in the
         manufacture of ancient musical instruments. My instruments are handmade,
@@ -35,9 +36,9 @@
         <h2 class="video-title">Psaltery listening, psaltery sound</h2>
       </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          I can make you a psaltery. Below are the instruments in stock:
-        </p>
+        <h2 class="text-gusli-vnal">
+          I can make you a psaltery, below are the instruments in stock:
+        </h2>
        
         <p class="text-gusli">
           Psalteries have different names in different countries such as KANTELE,
@@ -68,9 +69,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Making a lyre (kravik lyre). Below are the instruments in stock:
-        </p>
+        <h2 class="text-lira-vnal">
+          Making a lyre (kravik lyre), below are the instruments in stock:
+        </h2>
 
         <p class="text-lira">
           The lyre is an ancient stringed plucked musical instrument from the
