--- a/pages/es/es.html
+++ b/pages/es/es.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabricación y venta de instrumentos musicales antiguos, puede comprarnos instrumentos hechos a mano a un precio asequible.SALTERÍA, Salterio, KRAVIK-LIRA, KANTELE, GUSLI, KOKLE, LIRA, KANNEL, KANKLES"
+      content="Fabricación y venta de instrumentos musicales antiguos, puede comprarnos instrumentos hechos a mano a un precio asequible."
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      SALTERÍA, Salterio, KRAVIK-LIRA, LIRA. Antiguo instrumento musical. PSALTERY,
-      KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
+      Antiguo instrumento musical. SALTERÍA, Salterio, KRAVIK-LIRA, LIRA, PSALTERY,
+      KRAVIK-LYRE, KANTELE, GUSLI, LYRE
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musicales instrumentos salterio, lira</h1>
       <p class="content">
         Saludos. Me llamo Eugene, soy de Bielorrusia y me dedico a la
         fabricación de instrumentos musicales antiguos. Mis instrumentos están
@@ -35,14 +36,14 @@
         posible. Las condiciones de entrega y pago se acuerdan individualmente.
         Escríbame y hablaremos de todo.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Escucha del salterio, sonido del salterio</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Puedo fabricarle un salterio. A continuación se muestran los
+        <h2 class="text-gusli-vnal">
+          Puedo fabricarle un salterio, a continuación se muestran los
           instrumentos en stock:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Escucha del salterio, sonido del salterio</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Los salterios reciben diferentes nombres en los distintos países, como
           KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Es un instrumento musical
@@ -75,10 +76,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Fabricación de una lira (lira kravik). A continuación se muestran los
+        <h2 class="text-lira-vnal">
+          Fabricación de una lira (lira kravik), a continuación se muestran los
           instrumentos en stock:
-        </p>
+        </h2>
 
         <p class="text-lira">
           La lira es un antiguo instrumento musical de cuerda pulsada de los
