--- a/pages/et/et.html
+++ b/pages/et/et.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Vanade muusikainstrumentide tootmine ja müük, siit saab osta käsitööna valmistatud instrumente taskukohase hinnaga.Psalter, lüüra, kravik lüüra, kantele, kankles, cannelles, kannel, kokle"
+      content="Vanade muusikainstrumentide tootmine ja müük, siit saab osta käsitööna valmistatud instrumente taskukohase hinnaga."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Muusikainstrumente kannel(psalteri), lüüra</h1>
       <p class="content">
         Tere tulemast! Minu nimi on Eugene, olen Valgevenest ja teen vanu
         muusikainstrumente. Minu pillid on valmistatud käsitsi, neil on loomulik
@@ -34,14 +35,14 @@
         riikidesse on võimalik. Tarne- ja maksetingimusi arutatakse
         individuaalselt. Võtke minuga ühendust ja me arutame.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Psalteri kuulamine, psalteri heli</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Ma võin teile teha KANNEL (Psalteri). Allpool on esitatud olemasolevad
+        <h2 class="text-gusli-vnal">
+          Ma võin teile teha kannel(psalteri), allpool on esitatud olemasolevad
           vahendid:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Psalteri kuulamine, psalteri heli</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalteritel (KANNEL) on eri riikides erinevad nimed, näiteks KANTELE,
           PSALTERI, KOKLE, KANNEL, KANKLES, GUSLI. See on iidse päritoluga keelpill,
@@ -70,10 +71,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Lüüra (kraviki lüüra) valmistamine. Allpool on esitatud laos olevad
+        <h2 class="text-lira-vnal">
+          Lüüra (kraviki lüüra) valmistamine, allpool on esitatud laos olevad
           instrumendid:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lüüra on iidne keelpilliline muusikainstrument, mis on pärit 14.-16.
