--- a/pages/fi/fi.html
+++ b/pages/fi/fi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Teemme ja myymme vanhoja soittimia, meiltä voit ostaa käsintehtyjä soittimia edulliseen hintaan. Psalttari, liira, kravik liira, KANTELE, PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Teemme ja myymme vanhoja soittimia, meiltä voit ostaa käsintehtyjä soittimia edulliseen hintaan."
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      muinaiset soittimet Psalttari, liira, kravik liira, KANTELE, PSALTERY,
-      KRAVIK-LYRE, GUSLI, KOKLE, LYRE KANNEL, KANKLES
+      muinaiset soittimet Psalttari, lyyra, kravik lyyra, KANTELE, PSALTERY,
+      KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musikaali soittimet psalttari, lyyra</h1>
       <p class="content">
         Terveisiä! Nimeni on Eugene, olen Valko-Venäjältä ja valmistan muinaisia
         ​​soittimia. Soittimeni ovat käsintehtyjä, niillä on luonnollinen
@@ -34,13 +35,13 @@
         mahdollista. Toimitus- ja maksuehdot sovitaan erikseen. Kirjoita
         minulle, niin keskustellaan kaikesta.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Psalttarin kuuntelu, psalttarin ääni</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Voin tehdä sinulle psalttarin. Alla ovat saatavilla olevat työkalut:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Psalttarin kuuntelu, psalttarin ääni</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Voin tehdä sinulle psalttarin, alla ovat saatavilla olevat työkalut:
+        </h2>
         <p class="text-gusli">
           Psalttareilla on eri maissa eri nimiä, kuten KANTELE, PSALTERY, KOKLE,
           KANNEL, KANKLES, GUSLI. Se on muinaisperäinen jousisoitin, joka on ollut
@@ -70,9 +71,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Lyyran tekeminen (kravik-lyyra). Alla varastossa olevat instrumentit:
-        </p>
+        <h2 class="text-lira-vnal">
+          Lyyran tekeminen (kravik-lyyra), alla varastossa olevat instrumentit:
+        </h2>
 
         <p class="text-lira">
           Lyyra on ikivanha kielinen kynitty soitin 1300-1500-luvuilta. Siinä on
