--- a/pages/fr/fr.html
+++ b/pages/fr/fr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabrication et vente d'instruments de musique anciens. Ici, vous pouvez acheter des instruments fabriqués à la main à un prix abordable. PSALTÉRION, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Fabrication et vente d'instruments de musique anciens. Ici, vous pouvez acheter des instruments fabriqués à la main à un prix abordable."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Instruments de musique psaltérion, lyre</h1>
       <p class="content">
         Je vous salue ! Je m'appelle Eugène, je viens de Biélorussie et je me
         consacre à la fabrication d'instruments de musique anciens. Mes
@@ -36,13 +37,13 @@
         livraison et de paiement sont convenues individuellement. Écrivez-moi et
         nous discuterons de tout.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Écoute du psaltérion, son du psaltérion</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Je peux vous fabriquer un psaltérion. Voici les instruments en stock :
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Écoute du psaltérion, son du psaltérion</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Je peux vous fabriquer un psaltérion, voici les instruments en stock :
+        </h2>
         <p class="text-gusli">
           Les psaltérions portent des noms différents selon les pays, tels que
           KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Il s'agit d'un instrument
@@ -76,9 +77,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Fabrication d'une lyre (kravik lyre). Voici les instruments en stock :
-        </p>
+        <h2 class="text-lira-vnal">
+          Fabrication d'une lyre (kravik lyre), voici les instruments en stock :
+        </h2>
 
         <p class="text-lira">
           La lyre est un ancien instrument de musique à cordes pincées datant
