--- a/pages/hr/hr.html
+++ b/pages/hr/hr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Izrada i prodaja drevnih glazbenih instrumenata, ovdje možete kupiti ručno izrađene instrumente po pristupačnoj cijeni. Gusli, Lira, kravik-Lira, kantele, kankles, Kanel, kokle"
+      content="Izrada i prodaja drevnih glazbenih instrumenata, ovdje možete kupiti ručno izrađene instrumente po pristupačnoj cijeni."
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Drevni glazbeni instrumenti. PSALTERY, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE,
+      Drevni glazbeni instrumenti. PSALTERY, Lira, KANTELE, GUSLI, KOKLE,
       LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Glazbeni instrumenti gusli(psaltiri), lira</h1>
       <p class="content">
         Pozdrav! Moje ime je Eugene, ja sam iz Bjelorusije i bavim se
         proizvodnjom starih glazbenih instrumenata. Moji instrumenti su ručno
@@ -34,13 +35,13 @@
         Dostava je moguća u različite zemlje. Uvjeti isporuke i plaćanja
         dogovaraju se pojedinačno. Pišite mi i razgovarat ćemo o tome.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Slušanje gusla, zvuk gusla</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Mogu ti napraviti gusl. Ispod su alati dostupni na zalihama:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Slušanje gusla, zvuk gusla</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Mogu ti napraviti gusl, ispod su alati dostupni na zalihama:
+        </h2>
         <p class="text-gusli">
           Psaltiri u različitim zemljama imaju različita imena, kao što su
           kantele, gusl, kokle, Kanel, KANKLES, gusli. To je glazbeni gudački
@@ -68,9 +69,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Izrada lire (kravik lyre). Ispod su alati dostupni na zalihama:
-        </p>
+        <h2 class="text-lira-vnal">
+          Izrada lire (kravik lyre), ispod su alati dostupni na zalihama:
+        </h2>
 
         <p class="text-lira">
           Lira je drevni gudački iščupani glazbeni instrument iz 14.i 16.
