--- a/pages/hu/hu.html
+++ b/pages/hu/hu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Régi hangszerek készítése és értékesítése, nálunk kézzel készített hangszereket vásárolhat megfizethető áron. Zsoltár, PSALTERY, líra, kravik-líra, kantele, kankles, Kannel,"
+      content="Régi hangszerek készítése és értékesítése, nálunk kézzel készített hangszereket vásárolhat megfizethető áron."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Hangszerek zsoltár(psaltery), líra</h1>
       <p class="content">
         Üdvözlet! A nevem Jevgenyij, Fehéroroszországból származom, ősi
         hangszerek gyártásával foglalkozom. Hangszereim kézzel készülnek,
@@ -35,16 +36,16 @@
         országokba lehetséges. A szállítási és fizetési feltételeket egyedileg
         tárgyaljuk. Írj nekem, és megbeszélünk mindent.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">
+          Zsoltáros(psaltery) hallgatás, zsoltáros(psaltery) hang
+        </h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Készíthetek neked egy zsoltárt(psaltery). Az alábbiakban a raktáron
+        <h2 class="text-gusli-vnal">
+          Készíthetek neked egy zsoltárt(psaltery), az alábbiakban a raktáron
           lévő eszközök találhatók:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">
-            Zsoltáros(psaltery) hallgatás, zsoltáros(psaltery) hang
-          </h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           A zsoltároknak(psaltery) különböző neveik vannak a különböző
           országokban, például KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Ez
@@ -73,10 +74,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Líra készítése (kravik líra). Az alábbiakban a raktáron lévő eszközök
+        <h2 class="text-lira-vnal">
+          Líra készítése (kravik líra), az alábbiakban a raktáron lévő eszközök
           találhatók:
-        </p>
+        </h2>
 
         <p class="text-lira">
           A líra egy ősi húros pengetős hangszer a 14.-16. századból. Lapos,
