--- a/pages/info/info.html
+++ b/pages/info/info.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Гусли- старинный по происхождению струнный музыкальный инструмент, который славится своим чарующим звучанием. Какие гусли есть, гусли музыкальный инструмент, музыка гусли играющие народные, кокле, каннель, кантеле."
+      content="Гусли- старинный по происхождению струнный музыкальный инструмент, который славится своим чарующим звучанием."
     />
     <meta
       name="keywords"
-      content="гусли крыловидные древний старинный щипковый музыкальный струнный инструмент музыка играющие народные  кокле каннель кантеле канклес"
+      content="гусли крыловидные древний старинный щипковый музыкальный струнный инструмент"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Гусли инструмент-это один из самых старейших интересных народных инструментов. Гусли музыкальный старинный струнный народный инструмент, музыка гуслей, кокле, каннель, кантеле, канклес</title>
+    <title>Гусли инструмент-это один из самых старейших интересных народных инструментов.</title>
     <link rel="stylesheet" type="text/css" href="./info.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
     <meta name="yandex-verification" content="4ff80869fd518da7" />
@@ -61,38 +61,40 @@
     <article>
         <div class="content">
             <img class="content-img" src="../../images/gi-1.png" alt="изображение гуслей">
-            Гусли- древний по происхождению струнный музыкальный инструмент, который с
-            древних времен славился своим чарующим звучанием.</br></br> При игре обычно
-            инструмент находится на коленях, щипковым методом двух рук извлекаются
-            звуки, либо только правой рукой, а левой приглушает струны, также играют
-            на гуслях и бряцанием. Чтобы звук был более звонким при игре используют
-            медиатор.</br></br> Простые песни или импровизационные композиции достаточно
-            несложно создать на гуслях не имея опыта, за счет простого подбора
-            мелодичности звучания струн, поскольку за какую струну не возьмись всё
-            звучит красиво и гармонично.</br></br> Гусли считают старейшим типом и прародителем
-            других струнных инструментов, прообразом являлась, очевидно, простая доска
-            с натянутыми над ней струнами, так как в былинах встречается название
-            «гусельная досочка». Щипковые инструменты гусельного типа имеют более чем
-            тысячелетнюю историю, которая скрыла от нас их точный возраст и место их
-            рождения. Гусли изначально были не только музыкальным инструментом, с их
-            помощью люди передавали свои мысли, чувства, познания.</br></br> В процессе развития
-            гусли претерпели ряд изменений, а так же появились различные их
-            разновидности, могут отличаться по форме и разному количеству струн. У
-            других народов свои названия инструмента: литовский «канклес»,
-            карело-финский «кантеле», эстонский «каннель», чувашский «кесле»,
-            марийский «кюсле».</br></br> Гусли крыловидные состоят из плоского продолговатого
-            долбленого или сборного корпуса, нижней деки и верхней деки с
-            резонаторными отверстиями, колков для натяжения струн, струнодержателя,
-            вдоль лицевой деки веерообразно натянуты струны. Название дано по
-            открылку, который выступает за ряд колков в виде крыла.</br></br> Для изготовления
-            может применяться древесина хвойных и лиственных пород, таких как: ель,
-            сосна, клен, дуб, кедр, ольха и др. Строй диатонический, обычно мажорного
-            лада. В основном для изготовления гуслей существуют только небольшие
-            мастерские, которые создаются истинными любителями старины.</br></br> Гусли,
-            пожалуй, один из самых интересных народных инструментов. И если вы
-            думаете, что их жизнь ушла в прошлое, то это совсем не так, все больше
-            людей узнают и проявляют интерес к этому инструменту.</br></br>
-            Купить гусли можно <a href="/">ЗДЕСЬ</a>
+            <h1 class="topic">Гусли</h1>
+            <p>Гусли- древний по происхождению струнный музыкальный инструмент, который с
+              древних времен славился своим чарующим звучанием.</br></br> При игре обычно
+              инструмент находится на коленях, щипковым методом двух рук извлекаются
+              звуки, либо только правой рукой, а левой приглушает струны, также играют
+              на гуслях и бряцанием. Чтобы звук был более звонким при игре используют
+              медиатор.</br></br> Простые песни или импровизационные композиции достаточно
+              несложно создать на гуслях не имея опыта, за счет простого подбора
+              мелодичности звучания струн, поскольку за какую струну не возьмись всё
+              звучит красиво и гармонично.</br></br> Гусли считают старейшим типом и прародителем
+              других струнных инструментов, прообразом являлась, очевидно, простая доска
+              с натянутыми над ней струнами, так как в былинах встречается название
+              «гусельная досочка». Щипковые инструменты гусельного типа имеют более чем
+              тысячелетнюю историю, которая скрыла от нас их точный возраст и место их
+              рождения. Гусли изначально были не только музыкальным инструментом, с их
+              помощью люди передавали свои мысли, чувства, познания.</br></br> В процессе развития
+              гусли претерпели ряд изменений, а так же появились различные их
+              разновидности, могут отличаться по форме и разному количеству струн. У
+              других народов свои названия инструмента: литовский «канклес»,
+              карело-финский «кантеле», эстонский «каннель», чувашский «кесле»,
+              марийский «кюсле».</br></br> Гусли крыловидные состоят из плоского продолговатого
+              долбленого или сборного корпуса, нижней деки и верхней деки с
+              резонаторными отверстиями, колков для натяжения струн, струнодержателя,
+              вдоль лицевой деки веерообразно натянуты струны. Название дано по
+              открылку, который выступает за ряд колков в виде крыла.</br></br> Для изготовления
+              может применяться древесина хвойных и лиственных пород, таких как: ель,
+              сосна, клен, дуб, кедр, ольха и др. Строй диатонический, обычно мажорного
+              лада. В основном для изготовления гуслей существуют только небольшие
+              мастерские, которые создаются истинными любителями старины.</br></br> Гусли,
+              пожалуй, один из самых интересных народных инструментов. И если вы
+              думаете, что их жизнь ушла в прошлое, то это совсем не так, все больше
+              людей узнают и проявляют интерес к этому инструменту.</br></br>
+              Купить гусли можно <a href="/">ЗДЕСЬ</a>
+            </p>
         </div>
     </article>
   </body>
