--- a/pages/infolira/infolira.html
+++ b/pages/infolira/infolira.html
@@ -62,15 +62,17 @@
     <article>
       <div class="content">
         <img class="content-img" src="../../images/li.png" alt="изображение лиры" />
-        Лира древний струнный щипковый музыкальный инструмент родом из 14-16 веков. Имеет плоский
-        корпус округлой формы, обычно имеет 7 нейлоновых струн, но может иметь и более. 
-        Состоит из деревянного корпуса, звуковой резонаторной полости, соединенной перегородкой с двумя ручками.</br></br>
-         Лира является музыкальным наследием
-        древних времен: этот струнный инструмент был распространен во многих странах и был обновлен разными цивилизациями и получил
-        различные формы и названия. Лира считается самым популярным сохранившимся типом средневековым струнным музыкальным инструментом.</br></br>
-        Одним из популярных видов средневековой лиры является Kravik Lyre (Кравик-Лира) —  струнный инструмент ручной работы, который мы предлагаем вам в обновленной современной форме с 
-        индивидуальным дизайном.
-      </br> Купить Лиру можно <a href="../lira/lira.html">ЗДЕСЬ</a>
+        <h1 class="topic">Лира</h1>
+        <p> Лира древний струнный щипковый музыкальный инструмент родом из 14-16 веков. Имеет плоский
+          корпус округлой формы, обычно имеет 7 нейлоновых струн, но может иметь и более. 
+          Состоит из деревянного корпуса, звуковой резонаторной полости, соединенной перегородкой с двумя ручками.</br></br>
+           Лира является музыкальным наследием
+          древних времен: этот струнный инструмент был распространен во многих странах и был обновлен разными цивилизациями и получил
+          различные формы и названия. Лира считается самым популярным сохранившимся типом средневековым струнным музыкальным инструментом.</br></br>
+          Одним из популярных видов средневековой лиры является Kravik Lyre (Кравик-Лира) —  струнный инструмент ручной работы, который мы предлагаем вам в обновленной современной форме с 
+          индивидуальным дизайном.
+          </br> Купить Лиру можно <a href="../lira/lira.html">ЗДЕСЬ</a>
+        </p>
       </div>
     </article>
   </body>
