--- a/pages/it/it.html
+++ b/pages/it/it.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Produzione e vendita di strumenti musicali antichi, da noi puoi acquistare strumenti fatti a mano a un prezzo accessibile. Salterio, KANTELE, PSALTERY, KRAVIK-LYRE,LYRE"
+      content="Produzione e vendita di strumenti musicali antichi, da noi puoi acquistare strumenti fatti a mano a un prezzo accessibile."
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Strumenti musicali antichi.Salterio, KANTELE, PSALTERY, KRAVIK-LYRE,LYRE
+      Strumenti musicali antichi.Salterio, lira. KANTELE, PSALTERY, KRAVIK-LYRE, LYRE
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -22,6 +22,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Strumenti musicali salterio, lira</h1>
       <p class="content">
         Saluti! Mi chiamo Eugene, vengo dalla Bielorussia e sono impegnato nella
         produzione di vecchi strumenti musicali. I miei strumenti sono fatti a
@@ -34,14 +35,14 @@
         vari paesi. I Termini di consegna e pagamento sono negoziati
         individualmente. Scrivimi e discuteremo di tutto.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Ascolto salterio, suono salterio</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Posso farti un salterio. Di seguito sono riportati gli strumenti in
+        <h2 class="text-gusli-vnal">
+          Posso farti un salterio, di seguito sono riportati gli strumenti in
           magazzino:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Ascolto salterio, suono salterio</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalteries hanno nomi diversi in diversi paesi come KANTELE, PSALTERY,
           KOKLE, KANNEL, KANKLES, GUSLI. È uno strumento musicale a corde di antica
@@ -73,10 +74,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Fare una lira (kravik lira). Di seguito sono riportati gli strumenti
+        <h2 class="text-lira-vnal">
+          Fare una lira (kravik lira), di seguito sono riportati gli strumenti
           in magazzino:
-        </p>
+        </h2>
 
         <p class="text-lira">
           La lira è un antico strumento musicale a corde pizzicate dai secoli
