--- a/pages/lt/lt.html
+++ b/pages/lt/lt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Senovinių muzikos instrumentų gamyba ir pardavimas, čia galite įsigyti rankų darbo instrumentų už prieinamą kainą. Kanklės, Psalterija, KANTELE, KRAVIK-LYRE, GUSLI, PSALTERY, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Senovinių muzikos instrumentų gamyba ir pardavimas, čia galite įsigyti rankų darbo instrumentų už prieinamą kainą."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Muzikos instrumentus kanklės, lyra</h1>
       <p class="content">
         Sveiki! Mano vardas Eugenijus, esu iš Baltarusijos ir gaminu senovinius
         muzikos instrumentus. Mano instrumentai gaminami rankomis, jie pasižymi
@@ -34,16 +35,16 @@
         įvairias šalis. Pristatymo ir mokėjimo sąlygos aptariamos individualiai.
         Susisiekite su manimi ir aptarsime.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">
+          Psalterijos(Kanklės) klausymas, psalterijos(Kanklės) garsas
+        </h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Galiu pagaminti jums psalteriją(Kanklės). Žemiau pateikiami turimi
+        <h2 class="text-gusli-vnal">
+          Galiu pagaminti jums psalteriją(Kanklės), zemiau pateikiami turimi
           instrumentai:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">
-            Psalterijos(Kanklės) klausymas, psalterijos(Kanklės) garsas
-          </h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Įvairiose šalyse psalterijos(Kanklės) turi skirtingus pavadinimus,
           pavyzdžiui KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Tai senovinės
@@ -73,10 +74,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Lyros darymas (kravik lyra). Žemiau pateikiami sandėlyje esantys
+        <h2 class="text-lira-vnal">
+          Lyros darymas (kravik lyra), zemiau pateikiami sandėlyje esantys
           instrumentai:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lyra – senovinis styginis plėšomas XIV–XVI amžių muzikos instrumentas.
