--- a/pages/lv/lv.html
+++ b/pages/lv/lv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Seno mūzikas instrumentu ražošana un pārdošana, šeit jūs varat iegādāties ar rokām darinātus instrumentus par pieņemamu cenu.Psalterija, lira, kravik lira, kantele, kankles, kannel, kokle"
+      content="Seno mūzikas instrumentu ražošana un pārdošana, šeit jūs varat iegādāties ar rokām darinātus instrumentus par pieņemamu cenu."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Mūzikas instrumentu psalterija(kankles), lira</h1>
       <p class="content">
         Sveiciens! Mani sauc Eugene, esmu no Baltkrievijas un nodarbojos ar seno
         mūzikas instrumentu ražošanu. Mani instrumenti ir roku darbs, tiem ir
@@ -34,16 +35,16 @@
         uz dažādām valstīm. Piegādes un apmaksas nosacījumi tiek saskaņoti
         individuāli. Raksti man un visu sarunāsim.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">
+          Psalterijas klausīšanās, psalterijas skaņa
+        </h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Es varu izgatavot jums psalteriju. Zemāk ir uzskaitīti noliktavā
+        <h2 class="text-gusli-vnal">
+          Es varu izgatavot jums psalteriju, zemāk ir uzskaitīti noliktavā
           esošie instrumenti:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">
-            Psalterijas klausīšanās, psalterijas skaņa
-          </h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalterijām dažādās valstīs ir dažādi nosaukumi, piemēram KANTELE,
           PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Tas ir senas izcelsmes stīgu
@@ -72,10 +73,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Liras (kravik liras) izgatavošana. Zemāk ir uzskaitīti instrumenti,
+        <h2 class="text-lira-vnal">
+          Liras (kravik liras) izgatavošana, zemāk ir uzskaitīti instrumenti,
           kas ir noliktavā:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lira ir sena 14.-16. gadsimta stīgu plūksnainais mūzikas instruments.
