--- a/pages/nl/nl.html
+++ b/pages/nl/nl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Vervaardiging en verkoop van oude muziekinstrumenten, kunt u handgemaakte instrumenten kopen bij ons tegen een betaalbare prijs. Psalterij, lier, kravik-lier, kantele"
+      content="Vervaardiging en verkoop van oude muziekinstrumenten, kunt u handgemaakte instrumenten kopen bij ons tegen een betaalbare prijs."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Muziekinstrumenten psalterij, lier</h1>
       <p class="content">
         Gegroet! Mijn naam is Evgeny, ik kom uit Wit-Rusland en ik ben bezig met
         de vervaardiging van oude muziekinstrumenten. Mijn instrumenten zijn met
@@ -36,14 +37,14 @@
         worden individueel onderhandeld. Schrijf me en we zullen alles
         bespreken.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">psalterij luisteren, psalterij geluid</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Ik kan een Psalter voor je maken. Hieronder staan de instrumenten op
+        <h2 class="text-gusli-vnal">
+          Ik kan een Psalter voor je maken, hieronder staan de instrumenten op
           voorraad:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">psalterij luisteren, psalterij geluid</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalterieën hebben verschillende namen in verschillende landen zoals
           KANTELE, PSALTERIE, KOKLE, KANNEL, KANKLES, GUSLI. Het is een
@@ -76,10 +77,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Het maken van een lier (kravik lyre). Hieronder staan de instrumenten
+        <h2 class="text-lira-vnal">
+          Het maken van een lier (kravik lyre), hieronder staan de instrumenten
           op voorraad:
-        </p>
+        </h2>
 
         <p class="text-lira">
           De Lier is een oud snaar-geplukt muziekinstrument uit de 14e-16e eeuw.
