--- a/pages/no/no.html
+++ b/pages/no/no.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Å lage og selge gamle musikkinstrumenter, hos oss kan du kjøpe håndlagde instrumenter til en overkommelig pris. PSALTERY, lyre, kravik lyre, kantele, kankles, kannel, gusli, kokle,"
+      content="Å lage og selge gamle musikkinstrumenter, hos oss kan du kjøpe håndlagde instrumenter til en overkommelig pris."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musikkinstrumenter kantele (psaltery), lyren</h1>
       <p class="content">
         Hei, jeg heter Eugene, jeg er fra Hviterussland og lager antikke
         musikkinstrumenter. Instrumentene mine er laget for hånd, de har et
@@ -34,16 +35,16 @@
         forskjellige land er mulig. Leverings- og betalingsbetingelser
         diskuteres individuelt. Kontakt meg og vi vil diskutere.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">
+          Psaltery(kantele) lytting, psaltery(kantele) lyd
+        </h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Jeg kan lage et psalterium(kantele) til deg. Nedenfor er instrumentene
+        <h2 class="text-gusli-vnal">
+          Jeg kan lage et psalterium(kantele) til deg, nedenfor er instrumentene
           på lager:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">
-            Psaltery(kantele) lytting, psaltery(kantele) lyd
-          </h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalterier(kantele) har forskjellige navn i forskjellige land, for
           eksempel KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Det er et
@@ -73,9 +74,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Å lage en lyre (kravik lyre). Nedenfor er instrumentene på lager:
-        </p>
+        <h2 class="text-lira-vnal">
+          Å lage en lyre (kravik lyre), nedenfor er instrumentene på lager:
+        </h2>
 
         <p class="text-lira">
           Lyren er et gammelt strengeinstrument fra det 14.-16. århundre. Den
