--- a/pages/pl/pl.html
+++ b/pages/pl/pl.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Wykonywanie i sprzedaż starożytnych instrumentów muzycznych, u nas kupisz ręcznie robione instrumenty w przystępnej cenie. Psałterz, lira, lira kravik, KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI"
+      content="Wykonywanie i sprzedaż starożytnych instrumentów muzycznych, u nas kupisz ręcznie robione instrumenty w przystępnej cenie."
     />
     <meta
       name="keywords"
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      zabytkowe instrumenty muzyczne Psałterz, lira, lira kravik, PSALTERY,
-      KRAVIK-LYRE, KANTELE, GUSLI KOKLE, LYRE, KANNEL, KANKLES
+      Zabytkowe instrumenty muzyczne psałterz, lira, KANTELE, GUSLI, lira kravik, PSALTERY,
+      KRAVIK-LYRE, KOKLE, LYRE, KANNEL, KANKLES
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Instrumenty muzyczne gusli (psałterz), lira</h1>
       <p class="content">
         Witam!!! Mam na imię Eugene, pochodzę z Białorusi i zajmuję się
         produkcją starożytnych instrumentów muzycznych. Moje instrumenty są
@@ -34,14 +35,14 @@
         wysyłka do różnych krajów. Warunki dostawy i płatności są uzgadniane
         indywidualnie. Napisz do mnie, a wszystko omówimy.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Słuchanie psałterii, dźwięk psałterii</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Mogę zrobić dla Ciebie psałterz. Poniżej znajdują się instrumenty
+        <h2 class="text-gusli-vnal">
+          Mogę zrobić dla Ciebie psałterz, poniżej znajdują się instrumenty
           znajdujące się w magazynie:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Słuchanie psałterii, dźwięk psałterii</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psałterze mają różne nazwy w różnych krajach np. KANTELE, PSALTERY,
           KOKLE, KANNEL, KANKLES, GUSLI. Jest to muzyczny instrument strunowy o
@@ -72,10 +73,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Wykonanie liry (liry kravik). Poniżej przedstawiamy instrumenty
+        <h2 class="text-lira-vnal">
+          Wykonanie liry (liry kravik), poniżej przedstawiamy instrumenty
           znajdujące się w magazynie:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lira to starożytny strunowy instrument muzyczny szarpany z XIV-XVI
