--- a/pages/pt/pt.html
+++ b/pages/pt/pt.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabricação e venda de instrumentos musicais antigos, você pode comprar instrumentos artesanais de nós a um preço acessível. Saltério, Lira, kravik-Lira, kantele"
+      content="Fabricação e venda de instrumentos musicais antigos, você pode comprar instrumentos artesanais de nós a um preço acessível."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Instrumentos musicais saltério, lira</h1>
       <p class="content">
         Saudações! Meu nome é Evgeny, sou da Bielorrússia e estou envolvido na
         fabricação de instrumentos musicais antigos. Meus instrumentos são
@@ -35,14 +36,14 @@
         vários países é possível. As condições de entrega e pagamento são
         negociadas individualmente. Escreva para mim e discutiremos tudo.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Saltério ouvindo, saltério som</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Posso fazer de você um saltério. Abaixo estão os instrumentos em
+        <h2 class="text-gusli-vnal">
+          Posso fazer de você um saltério, abaixo estão os instrumentos em
           estoque:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Saltério ouvindo, saltério som</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Os saltérios têm nomes diferentes em diferentes países, como KANTELE,
           SALTÉRIO, KOKLE, KANNEL, KANKLES, GUSLI. É um instrumento musical de
@@ -73,10 +74,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Fazendo uma Lira (Lira kravik). Abaixo estão os instrumentos em
+        <h2 class="text-lira-vnal">
+          Fazendo uma Lira (Lira kravik), abaixo estão os instrumentos em
           estoque:
-        </p>
+        </h2>
 
         <p class="text-lira">
           A lira é um antigo instrumento musical de cordas dedilhadas dos
