--- a/pages/ro/ro.html
+++ b/pages/ro/ro.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Fabricarea și vânzarea de instrumente muzicale vechi, aici puteți cumpăra instrumente făcute manual la un preț accesibil.Psaltirea, KRAVIK-LYRE, KANTELE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Fabricarea și vânzarea de instrumente muzicale vechi, aici puteți cumpăra instrumente făcute manual la un preț accesibil."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Instrumente muzicale psaltirea, lira</h1>
       <p class="content">
         Salutări! Mă numesc Eugene, sunt din Belarus și fac instrumente muzicale
         vechi. Instrumentele mele sunt realizate manual, au un aspect natural,
@@ -34,14 +35,14 @@
         posibilă livrarea în diferite țări. Condițiile de livrare și de plată
         urmează să fie discutate individual. Contactați-mă și vom discuta.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Ascultare psaltire, sunet de psaltire</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Pot să-ți fac o psaltire. Mai jos sunt instrumentele pe care le am în
+        <h2 class="text-gusli-vnal">
+          Pot să-ți fac o psaltire, mai jos sunt instrumentele pe care le am în
           stoc:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Ascultare psaltire, sunet de psaltire</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psaltirile au nume diferite în diferite țări, cum ar fi KANTELE,
           PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Este un instrument muzical cu
@@ -73,10 +74,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Confecționarea unei lire (kravik lyre). Mai jos sunt prezentate
+        <h2 class="text-lira-vnal">
+          Confecționarea unei lire (kravik lyre), mai jos sunt prezentate
           instrumentele aflate în stoc:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lira este un instrument muzical antic cu coarde și pene din secolele
