--- a/pages/sl/sl.html
+++ b/pages/sl/sl.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Izdelava in prodaja starodavnih glasbil, pri nas lahko kupite ročno izdelane inštrumente po dostopni ceni. Psalterij, Lira, kravik-Lira, kantele, gusli, kankles, kannel, cockle"
+      content="Izdelava in prodaja starodavnih glasbil, pri nas lahko kupite ročno izdelane inštrumente po dostopni ceni."
     />
     <meta
       name="keywords"
-      content="Psalterij, Lira, kravik-Lira, kantele, gusli, kankles, kannel, cockle"
+      content="Psalterij, Lira, kravik-Lira, kantele, gusli, kankles, kannel"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Starodavni glasbeni instrumenti. Psalterij, Lira, kravik-Lira, kantele,
-      gusli, kankles, kannel, cockle
+      gusli, kankles, kannel
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Glasbila psalterij, lira</h1>
       <p class="content">
         Lep pozdrav! Moje ime je Evgenij, sem iz Belorusije in se ukvarjam s
         proizvodnjo starodavnih glasbil. Moji inštrumenti so izdelani ročno,
@@ -34,13 +35,13 @@
         Pogoji dostave in plačila se dogovarjajo posamično. Pišite mi in o vsem
         se bomo pogovorili.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Poslušanje psalterija, zvok psalterija</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Lahko ti naredim psalterij. Spodaj so instrumenti na zalogi:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Poslušanje psalterija, zvok psalterija</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Lahko ti naredim psalterij, spodaj so instrumenti na zalogi:
+        </h2>
         <p class="text-gusli">
           Psalterije imajo v različnih državah različna imena, kot so KANTELE,
           PSALTERIJ, KOKLE, KANNEL, KANKLES, GUSLI. Je glasbeni godalni
@@ -68,9 +69,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Izdelava lire (kravik Lira). Spodaj so instrumenti na zalogi:
-        </p>
+        <h2 class="text-lira-vnal">
+          Izdelava lire (kravik Lira), spodaj so instrumenti na zalogi:
+        </h2>
 
         <p class="text-lira">
           Lira je starodavno strunsko glasbilo iz 14.do 16. stoletja. Ima ravno
