--- a/pages/sr/sr.html
+++ b/pages/sr/sr.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Izrada i prodaja drevnih muzičkih instrumenata, kod nas možete kupiti ručno izrađene instrumente po pristupačnoj ceni. Gusli, lira, kravik-lira, kantele, kankles, kannel, kokle"
+      content="Izrada i prodaja drevnih muzičkih instrumenata, kod nas možete kupiti ručno izrađene instrumente po pristupačnoj ceni."
     />
     <meta
       name="keywords"
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Muzički instrumenata gusli, lira</h1>
       <p class="content">
         Pozdrav! Moje ime je Eugene, Ja sam iz Belorusije i bavim se
         proizvodnjom starih muzičkih instrumenata. Moji instrumenti su ručno
@@ -34,13 +35,13 @@
         Dostava u različite zemlje je moguća. Uslovi isporuke i plaćanja se
         određuju pojedinačno. Pišite mi i razgovaraćemo o svemu.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Slušanje gusla, zvuk gusla</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Mogu ti napraviti gusle. Ispod su alati dostupni u skladištu:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Slušanje gusla, zvuk gusla</h2>
-        </div>
+        <h2 class="text-gusli-vnal">
+          Mogu ti napraviti gusle, ispod su alati dostupni u skladištu:
+        </h2>
         <p class="text-gusli">
           Gusli imaju različita imena u različitim zemljama, kao što su KANTELE,
           GUSLI, KOKLE, KANNEL, GUSLI, KANKLES. To je muzički gudački instrument
@@ -68,9 +69,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Izrada lire (kravik lire). Ispod su alati dostupni u skladištu:
-        </p>
+        <h2 class="text-lira-vnal">
+          Izrada lire (kravik lire), ispod su alati dostupni u skladištu:
+        </h2>
 
         <p class="text-lira">
           Lira je drevni gudački muzički instrument od 14.do 16. veka. Ima ravno
