--- a/pages/sv/sv.html
+++ b/pages/sv/sv.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Tillverkning och försäljning av antika musikinstrument, här kan du köpa handgjorda instrument till ett överkomligt pris. KANTELE, PSALTERI, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES"
+      content="Tillverkning och försäljning av antika musikinstrument, här kan du köpa handgjorda instrument till ett överkomligt pris."
     />
     <meta
       name="keywords"
@@ -13,7 +13,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      antika musikinstrument PSALTERI, lira kravik, KANTELE, GUSLI, KOKLE, LYRE,
+      Antika musikinstrument PSALTERI, lyra, KANTELE, GUSLI, KOKLE, LYRE,
       KANNEL, KANKLES, PSALTERY, KRAVIK-LYRE
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musikinstrument psalteri, lyra</h1>
       <p class="content">
         Jag heter Eugene, är från Vitryssland och tillverkar antika
         musikinstrument. Mina instrument är gjorda för hand, de har ett
@@ -34,14 +35,14 @@
         länder är möjlig. Leverans- och betalningsvillkor diskuteras
         individuellt. Kontakta mig så diskuterar vi.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Psaltery listening, psaltery sound</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Jag kan göra en psalteri åt dig. Nedan finns de instrument som finns i
+        <h2 class="text-gusli-vnal">
+          Jag kan göra en psalteri åt dig, nedan finns de instrument som finns i
           lager:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Psaltery listening, psaltery sound</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psaltare har olika namn i olika länder, t.ex. KANTELE, PSALTERY, KOKLE,
           KANNEL, KANKLES, GUSLI. Det är ett musikaliskt stränginstrument av
@@ -71,10 +72,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Tillverkning av en lyra (kravik-lyra). Nedan finns de instrument som
+        <h2 class="text-lira-vnal">
+          Tillverkning av en lyra (kravik-lyra), nedan finns de instrument som
           finns i lager:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Lyran är ett gammalt sträng- och plockinstrument från 1300-1600-talet.
