--- a/pages/zh/zh.html
+++ b/pages/zh/zh.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="制造和销售古代乐器，您可以以实惠的价格从我们这里购买手工制作的乐器。 诗篇，七弦琴，克拉维克-七弦琴，康德莱。"
+      content="制造和销售古代乐器，您可以以实惠的价格从我们这里购买手工制作的乐器。"
     />
     <meta
       name="keywords"
@@ -15,11 +15,11 @@
     <title>古代乐器。 诗篇，七弦琴，克拉维克-七弦琴，康德莱。</title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
-    
   </head>
 
   <body>
     <main>
+      <h1 class="topic">乐器诗篇，七弦琴</h1>
       <p class="content">
         问候！ 我叫叶夫根尼，来自白俄罗斯，从事古代乐器的制造。
         我的乐器是手工制作的，它们有一个自然的外观，一个明亮的自然声音，让你提取和谐的声音组合，有机会看到遥远的过去。
@@ -28,11 +28,11 @@
         交付到各个国家是可能的。 交货和付款条件是单独协商的.
         写信给我，我们将讨论一切。
       </p>
+      <div class="video-block">
+        <h2 class="video-title">听诗篇，诗篇的声音</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">我可以给你做一个诗篇。 以下是库存工具:</p>
-        <div class="video-block">
-          <h2 class="video-title">听诗篇，诗篇的声音</h2>
-        </div>
+        <h2 class="text-gusli-vnal">我可以给你做一个诗篇。 以下是库存工具:</h2>
         <p class="text-gusli">
           Gusli和在不同的国家有不同的名称，如KANTELE, PSALTERY, KOKLE, KANNEL,
           KANKLES, GUSLI。
@@ -51,9 +51,9 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
+        <h2 class="text-lira-vnal">
           制作七弦琴（kravik lyre）。 以下是库存工具:
-        </p>
+        </h2>
 
         <p class="text-lira">
           七弦琴是14世纪和16世纪的一种古老的弦乐器。
