--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta
       name="keywords"
-      content="гусли, крыловидные, кантеле, 11 струн, недорого, музыкальный инструмент старинный, струнные гусли, купить гусли 12 струн, гусли музыка, цена, гусли в Беларуси, России, кокле, каннель, кантеле, канклес"
+      content="гусли, крыловидные, кантеле, музыкальный инструмент старинный, купить гусли, цена, кокле, каннель, кантеле, канклес"
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -96,6 +96,7 @@
     </header>
 
     <main>
+      <h1 class="topic">Музыкальный инструмент гусли</h1>
       <p class="upcontent">
         Где купить гусли? egusli.by здесь можно ознакомиться с музыкальными
         инструментами, выбрать какие гусли купить себе.
@@ -118,18 +119,6 @@
         изготавливаю <a href="./pages/lira/lira.html">Лиру</a>
       </p>
 
-      <div class="video-block">
-        <h2 class="video-title">Гусли слушать, звучание гуслей</h2>
-        <iframe
-          class="video"
-          src="https://www.youtube.com/embed/7R_rCmHMXrE"
-          title="YouTube video player"
-          frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-          allowfullscreen
-        ></iframe>
-      </div>
-
       <!-- Slideshow container -->
       <div id="myworks" class="slideshow-container">
         <!-- Полноразмерные изображения с номером и текстом подписи -->
@@ -145,14 +134,14 @@
         <a class="next" onclick="rightSlide()">&#10095;</a>
       </div>
 
-      <h1 id="textguslivnal">Гусли в наличии:</h1>
+      <h2 id="textguslivnal">Гусли в наличии:</h2>
       <div id="available">
         <ul class="images images1">
           <li class="visible">
             <img src="images/product/1/1.jpg" alt="Гусли-изображение-1" />
           </li>
           <li>
-            <h2 class="textproduct">Гусли № 1, 11 струн,<br />цена: 300 Br</h2>
+            <h3 class="textproduct">Гусли № 1, 11 струн,<br />цена: 300 Br</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/1/2.jpg" alt="Гусли-изображение-2" />
@@ -166,7 +155,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 2, 12 струн,<br />цена: 360 Br</h2>
+            <h3 class="textproduct">Гусли № 2, 12 струн,<br />цена: 360 Br</h3>
           </li>
           <div class="hidden-photos">
             <img src="images/product/2/2.jpg" alt="Гусли-изображение-2" />
@@ -180,7 +169,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 3, 12 струн,<br />цена: 330 Br</h2>
+            <h3 class="textproduct">Гусли № 3, 12 струн,<br />цена: 330 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -196,7 +185,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 4, 12 струн,<br />цена: 360 Br</h2>
+            <h3 class="textproduct">Гусли № 4, 12 струн,<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -212,7 +201,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 5, 12 струн,<br />цена: 330 Br</h2>
+            <h3 class="textproduct">Гусли № 5, 12 струн,<br />цена: 330 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -227,7 +216,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 6, 11 струн,<br />цена: 320 Br</h2>
+            <h3 class="textproduct">Гусли № 6, 11 струн,<br />цена: 320 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -244,7 +233,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 7, 12 струн,<br />цена: 360 Br</h2>
+            <h3 class="textproduct">Гусли № 7, 12 струн,<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -260,7 +249,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 8, 12 струн,<br />цена: 360 Br</h2>
+            <h3 class="textproduct">Гусли № 8, 12 струн,<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -274,7 +263,7 @@
           </li>
 
           <li>
-            <h2 class="textproduct">Гусли № 9, 12 струн,<br />цена: 360 Br</h2>
+            <h3 class="textproduct">Гусли № 9, 12 струн,<br />цена: 360 Br</h3>
           </li>
 
           <div class="hidden-photos">
@@ -283,6 +272,18 @@
             <img src="images/product/9/4.jpg" alt="Гусли-изображение-4" />
           </div>
         </ul>
+      </div>
+
+      <div class="video-block">
+        <h2 class="video-title">Гусли слушать, звучание гуслей</h2>
+        <iframe
+          class="video"
+          src="https://www.youtube.com/embed/7R_rCmHMXrE"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          allowfullscreen
+        ></iframe>
       </div>
     </main>
 
