--- a/pages/de/de.html
+++ b/pages/de/de.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Produktion und Verkauf von Vintage-Musikinstrumenten, können Sie kaufen handgefertigte Instrumente zu einem erschwinglichen Preis. Psalterium, Leier, Kravik Leier,Psalter,Kantele"
+      content="Produktion und Verkauf von Vintage-Musikinstrumenten, können Sie kaufen handgefertigte Instrumente zu einem erschwinglichen Preis."
     />
     <meta
       name="keywords"
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
       Altes Musikinstrument. Psalterium, Leier, Kravik Leier, Psalter, Kantele,
-      PSALTERY, KRAVIK-LYRE, GUSLI, KOKLE, LYRE, KANNEL, KANKLES
+      PSALTERY, KRAVIK-LYRE, GUSLI, LYRE
     </title>
     <link rel="stylesheet" type="text/css" href="../lang.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -23,6 +23,7 @@
 
   <body>
     <main>
+      <h1 class="topic">Musikinstrumenten Psalterium, leier</h1>
       <p class="content">
         Seid gegrüßt! Mein Name ist Eugene, ich komme aus Weißrussland und
         beschäftige mich mit der Herstellung von alten Musikinstrumenten. Meine
@@ -36,14 +37,14 @@
         Länder ist möglich. Liefer- und Zahlungsbedingungen werden individuell
         vereinbart. Schreiben Sie mir und wir werden alles besprechen.
       </p>
+      <div class="video-block">
+        <h2 class="video-title">Psalterium hören, Psalterium klingen</h2>
+      </div>
       <div class="div-gusli">
-        <p class="text-gusli-vnal">
-          Ich kann Ihnen eine Psalterie bauen. Unten sind die Instrumente auf
+        <h2 class="text-gusli-vnal">
+          Ich kann Ihnen eine Psalterie bauen, unten sind die Instrumente auf
           Lager:
-        </p>
-        <div class="video-block">
-          <h2 class="video-title">Psalterium hören, Psalterium klingen</h2>
-        </div>
+        </h2>
         <p class="text-gusli">
           Psalterien haben in den verschiedenen Ländern unterschiedliche Namen
           wie KANTELE, PSALTERY, KOKLE, KANNEL, KANKLES, GUSLI. Es handelt sich um
@@ -77,10 +78,10 @@
         </p>
       </div>
       <div class="div-lira">
-        <p class="text-lira-vnal">
-          Herstellung einer Leier (kravik lyre). Im Folgenden sind die
+        <h2 class="text-lira-vnal">
+          Herstellung einer Leier (kravik lyre), im Folgenden sind die
           Instrumente auf Lager:
-        </p>
+        </h2>
 
         <p class="text-lira">
           Die Leier ist ein altes Zupfmusikinstrument mit Saiten aus dem 14. bis
