--- a/pages/lira/lira.html
+++ b/pages/lira/lira.html
@@ -13,8 +13,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      Купить Лиру. Лира Кравик. Kravik Lyre, недорого. Лиры из Беларуси. Лира
-      музыкальный инструмент.
+      Купить Лиру. Лира Кравик. Kravik Lyre, недорого. Лира музыкальный
+      инструмент.
     </title>
     <link rel="stylesheet" type="text/css" href="./lira.css" />
     <link rel="icon" href="../../images/favicon.ico" type="image/x-icon" />
@@ -22,34 +22,64 @@
     <meta name="yandex-verification" content="0917a70fd744a783" />
 
     <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
-  (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-  m[i].l=1*new Date();
-  for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-  k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-  (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
+        }
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
 
-  ym(94134743, "init", {
-       clickmap:true,
-       trackLinks:true,
-       accurateTrackBounce:true,
-       webvisor:true,
-       ecommerce:"dataLayer"
-  });
-</script>
-<noscript><div><img src="https://mc.yandex.ru/watch/94134743" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
-<!-- /Yandex.Metrika counter -->
+      ym(94134743, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true,
+        ecommerce: "dataLayer",
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/94134743"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
 
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9NQ47NKGZP"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-9NQ47NKGZP"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-9NQ47NKGZP');
-</script>
-
+      gtag("config", "G-9NQ47NKGZP");
+    </script>
   </head>
 
   <body>
@@ -65,33 +95,35 @@
     </header>
 
     <main>
+      <h1 class="topic">Музыкальный инструмент Лира</h1>
       <p class="content">
         Приветствую! Меня зовут Евгений и я занимаюсь изготовлением древнего
-        музыкального инструмента- <a href="../infolira/infolira.html">Лира</a>, Kravik Lyre (Кравик-Лира). Это щипковый инструмент,
-        позволяющий проникнуться атмосферой древности, своим  чарующим звучанием и внешним видом. Для
-        приобретения инструмента и вопросам свяжитесь со мной по данным
-        <a href="#contactsjump">контактам</a>. Возможна отправка в другие
+        музыкального инструмента- <a href="../infolira/infolira.html">Лира</a>,
+        Kravik Lyre (Кравик-Лира). Это щипковый инструмент, позволяющий
+        проникнуться атмосферой древности, своим чарующим звучанием и внешним
+        видом. Для приобретения инструмента и вопросам свяжитесь со мной по
+        данным <a href="#contactsjump">контактам</a>. Возможна отправка в другие
         страны. Условия доставки и оплаты согласовываются индивидуально.Также
         изготавливаю <a href="/">ГУСЛИ</a>
       </p>
 
-      <h1 id="textvnal">Лиры в наличии:</h1>
+      <h2 id="textvnal">Лиры в наличии:</h2>
       <div id="available">
-          <ul class="images images1">
-            <li class="visible">
-              <img src="../../images/lira/1/1.jpg" alt="Лира-изображение-1" />
-            </li>
-            <li>
-              <h2 class="textproduct">
-                Лира Кравик / Kravik Lyre №1, 7 струн,<br />нет в наличии
-              </h2>
-            </li>
-            <div class="hidden-photos">
-              <img src="../../images/lira/1/2.jpg" alt="Лира-изображение-2" />
-              <img src="../../images/lira/1/3.jpg" alt="Лира-изображение-3" />
-              <img src="../../images/lira/1/4.jpg" alt="Лира-изображение-4" />
-            </div>
-          </ul>
+        <ul class="images images1">
+          <li class="visible">
+            <img src="../../images/lira/1/1.jpg" alt="Лира-изображение-1" />
+          </li>
+          <li>
+            <h3 class="textproduct">
+              Лира Кравик / Kravik Lyre №1, 7 струн,<br />нет в наличии
+            </h3>
+          </li>
+          <div class="hidden-photos">
+            <img src="../../images/lira/1/2.jpg" alt="Лира-изображение-2" />
+            <img src="../../images/lira/1/3.jpg" alt="Лира-изображение-3" />
+            <img src="../../images/lira/1/4.jpg" alt="Лира-изображение-4" />
+          </div>
+        </ul>
 
         <ul class="images images1">
           <li class="visible">
@@ -99,9 +131,9 @@
           </li>
 
           <li>
-            <h2 class="textproduct">
+            <h3 class="textproduct">
               Лира Кравик / Kravik Lyre №2, 7 струн,<br />цена: 300 Br
-            </h2>
+            </h3>
           </li>
           <div class="hidden-photos">
             <img src="../../images/lira/2/2.jpg" alt="Лира-изображение-2" />
@@ -129,11 +161,7 @@
           </h3>
 
           <h3>
-            <a
-              class="center"
-              href="https://t.me/evgeni652"
-              target="_blank"
-            >
+            <a class="center" href="https://t.me/evgeni652" target="_blank">
               <img
                 class="vk-icon-img"
                 src="../../images/telegram.png"
@@ -145,11 +173,7 @@
 
           <h3>
             <a class="center" href="https://vk.com/egusli" target="_blank">
-              <img
-                class="vk-icon-img"
-                src="../../images/vk.png"
-                alt="vk.com"
-              />
+              <img class="vk-icon-img" src="../../images/vk.png" alt="vk.com" />
               &nbsp; ВКонтакте
             </a>
           </h3>
@@ -182,7 +206,8 @@
         </div>
       </div>
 
-      <div class="div-language">Language: <span class="span-active-lang">ru</span>
+      <div class="div-language">
+        Language: <span class="span-active-lang">ru</span>
         <a href="../en/en.html">en</a>
         <a href="../fr/fr.html">fr</a>
         <a href="../es/es.html">es</a>
